<resources>
    <string name="app_name">News Feed</string>
    <string name="section_holder">Life and style</string>
    <string name="author_holder">Some Author</string>
    <string name="title_holder">Long placeholder title that should wrap to more
        than 2 lines of text</string>
    <string name="date_holder">May 26, 2018</string>
    <string name="time_holder">2:00 PM</string>
    <string name="no_news">No news found. Please, try to search for another topic.</string>
    <string name="no_internet_connection">No internet connection.</string>
    <string name="settings_menu_item">Settings</string>
    <string name="settings_title">News Settings</string>
    <string name="settings_keyword_label">Keyword for search</string>
    <string name="settings_keyword_key" translatable="false">keyword</string>
    <string name="settings_keyword_default" translatable="false">vegan</string>
</resources>
